#
# configure.in
#
#		This program is free software; you can redistribute it and/or
#		modify it under the terms of the GNU General Public License
#		as published by the Free Software Foundation; either version
#		2 of the License, or (at your option) any later version.
#
# Copyright (c) 2003-2005 Thomas Graf <tgraf@suug.ch>
#

AC_INIT(libnl, 1.0-pre6, tgraf@suug.ch)
AC_CONFIG_HEADER(lib/defs.h)

save_CFLAGS="${CFLAGS}"
save_LDFLAGS="${LDFLAGS}"
save_CPPFLAGS="${CPPFLAGS}"

AC_PROG_CC
AC_PROG_INSTALL

AC_C_CONST
AC_C_INLINE

#####################################################################
##
## libm check
##
#####################################################################
M="No "
AC_CHECK_LIB(m, pow,
[
  LIBM="-lm"
  M="Yes"
],[
    echo
    echo "*** Error: libm required ***"
    echo
    exit
])

#####################################################################
##
## verbose error strings
##
#####################################################################
AC_ARG_ENABLE(verbose-errors,
[  --enable-verbose-errors enable verbose errors (debugging)],[
	if test x$enableval = xyes; then
		AC_DEFINE_UNQUOTED(VERBOSE_ERRORS,"1",[verbose errors])
	fi
])

#####################################################################
##
## compile decisions
##
#####################################################################
COMPILE_LIBNL="Yes "
LIBNL_LIB="$LIBM"

AC_SUBST(LIBNL_LIB)

AC_OUTPUT([Makefile.opts libnl-1.pc])

#####################################################################
##
## status report
##
#####################################################################
echo "
----------------------------------------------------------------------
SUMMARY:

Included in Compilation:
  libnl:   $COMPILE_LIBNL $LIBNL_LIB

Dependencies:
bmon:
  libm             $M       (required)"
